# northwind-dbt-core

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
macros/: used_columns.sql
models/northwind/: categories.sql  customers.sql  dim_categories.sql  dim_categories_macro.sql  employees.sql  fct_orders.sql  fct_orders2020.sql  fct_orders2021.sql  fct_orders_detail.sql  orderdetails.sql  orderfact.sql  orderfact2020.sql  orderfact2021.sql  schema.yml  sources.yml
tests/: test_customer.sql
